--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,77 @@
-<p>home works!</p>
+<div class="container">
+    <div id="flow">
+        <span class="flow-1"></span>
+        <span class="flow-2"></span>
+        <span class="flow-3"></span>
+    </div>
+    <div class="section">
+
+        <!-- Developers -->
+        <div class="row columns">
+            <div class="column is-one-third">
+                <div class="card large">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="../../../assets/img/baner_usuarios.jpeg" alt="Image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4 no-padding">Usuarios</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            Administra todos los usuarios de la aplicación movil y crea nuevos brigadistas o administradores.
+                            <hr>
+                            <button class="button is-danger is-outlined">Outlined</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-one-third">
+                <div class="card large">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="../../../assets/img/baner_productos.png" alt="Image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4 no-padding">Productos y servicios</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            Crea, modifica o elimina los productos y servicios los cuales se muestran el la applicación movil.
+                            <hr>
+                            <button class="button is-warning is-outlined">Outlined</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-one-third">
+                <div class="card large">
+                    <div class="card-image">
+                        <figure class="image">
+                            <img src="../../../assets/img/baner_novedades.png" alt="Image">
+                        </figure>
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-content">
+                                <p class="title is-4 no-padding">Noticias y novedades</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            Agrega nuevas noticias o novedades para la app.
+                            <hr>
+                            <button class="button is-info is-outlined">Outlined</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Developers -->
+    </div>
+</div>
