--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<section class="hero is-fullheight">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <div class="column is-4 is-offset-4">
+                <h3 class="title has-text-black">Bienvenido</h3>
+                <hr class="login-hr">
+                <p class="subtitle has-text-black">Por favor inicia tu secion.</p>
+                <div class="box">
+                    <figure class="avatar">
+                        <img src="../../../assets/img/logoTransparente.png" width="150">
+                    </figure>
+                    <form>
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-large" type="email" placeholder="Correo electronico" autofocus="">
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-large" type="password" placeholder="Contraseña">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label class="checkbox">
+                        <input type="checkbox">
+                        Recuerdame
+                        </label>
+                        </div>
+                        <button class="button is-block is-info is-large is-fullwidth">Ingresar <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                    </form>
+                </div>
+                <p class="has-text-grey">
+                    <a href="../">Registrate</a> &nbsp;·&nbsp;
+                    <a href="../">He olvidado mi contraseña?</a> &nbsp;
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
