--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
                         Recuerdame
                         </label>
                         </div>
-                        <button class="button is-block is-info is-large is-fullwidth">Ingresar <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+                        <button class="button is-block is-info is-large is-fullwidth" [routerLink]="['/home']">Ingresar <i class="fa fa-sign-in" aria-hidden="true"></i></button>
                     </form>
                 </div>
                 <p class="has-text-grey">
