--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container">
     <div id="flow">
         <span class="flow-1"></span>
@@ -33,7 +35,7 @@
                 <div class="card large">
                     <div class="card-image">
                         <figure class="image">
-                            <img src="../../../assets/img/baner_productos.png" alt="Image">
+                            <img src="../../../assets/img/baner_productos.jpg" alt="Image">
                         </figure>
                     </div>
                     <div class="card-content">
@@ -64,7 +66,7 @@
                             </div>
                         </div>
                         <div class="content">
-                            Agrega nuevas noticias o novedades para la app.
+                            Manten al dia a todos los usuarios de la applicacion movil actualizandola con nueva información.
                             <hr>
                             <button class="button is-info is-outlined">Outlined</button>
                         </div>
