--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
                         <div class="content">
                             Administra todos los usuarios de la aplicación movil y crea nuevos brigadistas o administradores.
                             <hr>
-                            <button class="button is-danger is-outlined">Outlined</button>
+                            <button class="button is-danger is-outlined" [routerLink]="['/usuarios']">Outlined</button>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                         <div class="content">
                             Crea, modifica o elimina los productos y servicios los cuales se muestran el la applicación movil.
                             <hr>
-                            <button class="button is-warning is-outlined">Outlined</button>
+                            <button class="button is-warning is-outlined" [routerLink]="['/productos']">Outlined</button>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                         <div class="content">
                             Manten al dia a todos los usuarios de la applicacion movil actualizandola con nueva información.
                             <hr>
-                            <button class="button is-info is-outlined">Outlined</button>
+                            <button class="button is-info is-outlined" [routerLink]="['/novedades']">Outlined</button>
                         </div>
                     </div>
                 </div>
