--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -19,8 +19,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let usuario of usuarioService.usuarios">
-        <th>1</th>
+      <tr *ngFor="let usuario of usuarioService.usuarios | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
+        <th>{{i+1}}</th>
         <td>{{usuario.nombre}}</td>
         <td>{{usuario.correo}}</td>
         <td>{{usuario.edad}}</td>
@@ -33,6 +33,8 @@
       </tr>
     </tbody>
   </table>
+
+  <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
 
 </div>
 
