--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,21 +14,15 @@
             <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
-                            Account
+                            Cuenta
                         </a>
                     <div class="navbar-dropdown">
                         <a class="navbar-item">
-                                Dashboard
-                            </a>
-                        <a class="navbar-item">
-                                Profile
-                            </a>
-                        <a class="navbar-item">
-                                Settings
+                                Perfil
                             </a>
                         <hr class="navbar-divider">
                         <div class="navbar-item">
-                            Logout
+                            Sailr
                         </div>
                     </div>
                 </div>
