--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -113,6 +113,23 @@
                               
                             </div>
                           </div>
+
+                          <div class="file has-name is-fullwidth">
+                            <label class="file-label">
+                              <input class="file-input" type="file" name="resume">
+                              <span class="file-cta">
+                                <span class="file-icon">
+                                  <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                  Sube una foto…
+                                </span>
+                              </span>
+                              <span class="file-name">
+                                Screen Shot 2017-07-29 at 15.54.25.png
+                              </span>
+                            </label>
+                          </div>
                           
                           
                           <div class="field is-grouped">
