--- a/src/app/components/novedades/novedades.component.html
+++ b/src/app/components/novedades/novedades.component.html
@@ -1,108 +1,187 @@
 <app-navbar></app-navbar>
+
+<h1 class="title is-2">Lista de novedades</h1>
+<button class="button is-primary is-outlined" (click)="addNovedadForm()">Nuevo <span class="fas fa-plus" style="margin-left: 5px;"></span></button>
+
+
 <div class="content">
-    <div class="colums is-variable is-1-mobile is-0-tablet is-3-desktop is-8-widescreen is-2-fullhd">
-        <div class="column">
-        <div class="card" *ngFor="let novedad of novedadService.novedades | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
-            <div class="card-image">
-            <figure class="image is-4by3">
-                <img src="{{novedad.imagen}}" alt="Placeholder image">
-            </figure>
-            </div>
-            <div class="card-content">
-            <div class="media">
-                <div class="media-content">
-                <p class="title is-4">{{novedad.titulo}}</p>
-                <p class="subtitle is-6">{{novedad.fechaPublicacion}}</p>
-                </div>
-            </div>
-        
-            <div class="content">
-                {{novedad.descripcion}}
-                <br>
-                
-            </div>
-            </div>
-            <footer class="card-footer">
-                <a href="#" class="card-footer-item">Edit</a>
-                <a href="#" class="card-footer-item">Delete</a>
-            </footer>
-                
-        </div>
-    </div>
-    </div>
+
+<table class="table is-striped">
+    <thead>
+      <tr>
+        <th>Nº</th>
+        <th>Titulo</th>
+        <th>Fecha de publicación</th>
+        <th>Descripcion</th>
+        <th>Link</th>
+        <th>Operaciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let novedad of novedadService.novedades | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
+        <th>{{i+1}}</th>
+        <td>{{novedad.titulo}}</td>
+        <td>{{novedad.fechaPublicacion}}</td>
+        <td>{{novedad.descripcion}}</td>
+        <td>{{novedad.link}}</td>
+        <td>
+            <button class="button is-warning is-outlined" (click)="updNovedadForm(novedad)"><span class="fas fa-edit"></span>Editar</button>
+            <button class="button is-danger is-outlined" style="margin-top: 5px;" (click)="deleteNovedad(novedad._id)"><span class="fas fa-trash-alt"></span>Eliminar</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <pagination-controls (pageChange)="paginaActual = $event"></pagination-controls>
+
 </div>
 
-<div class="columns is-centered" style="padding: 2rem" *ngFor="let novedad of novedadService.novedades | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-                <figure class="image is-2by1">
-                    <img src="{{novedad.imagen}}" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-content">
-                        <p class="title is-4">John Smith</p>
-                        <p class="subtitle is-6">@johnsmith</p>
-                    </div>
-                </div>
+<div class="content">
+    <ng-template [ngIf]="addNovedad">
+        <div id="modal" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card">
+                <header class="modal-card-head">
+                    <p class="modal-card-title">Nueva novedad</p>
+                    <button class="delete" aria-label="close" (click)="cerrarModal(novedadForm)"></button>
+                </header>
+                <section class="modal-card-body">
 
-                <div class="content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-                    <a>@bulmaio</a>.
-                    <a href="#">#css</a>
-                    <a href="#">#responsive</a>
-                </div>
+                    <form #novedadForm='ngForm' (ngSubmit)='postNovedad(novedadForm)' action="">
+
+                        <div class="field">
+                            <label class="label">Titulo</label>
+                            <div class="control">
+                              <input class="input" type="text" placeholder="Ingresa el titulo de la novedad" name="titulo" #titulo="ngModel" [(ngModel)]="novedadService.selectedNovedad.titulo">
+                            </div>
+                          </div>
+                          
+                          <div class="field">
+                            <label class="label">Descripcion</label>
+                            <div class="control">
+                                <textarea class="textarea" placeholder="Ingresa una breve descripción" name="descripcion" #descripcion="ngModel" [(ngModel)]="novedadService.selectedNovedad.descripcion"></textarea>
+                            </div>
+                          </div>
+
+                          <div class="field">
+                            <label class="label">Link</label>
+                            <p class="control has-icons-left">
+                                <input class="input" type="text" placeholder="Ingresa un link para redireccionar para mas info" name="link" #link="ngModel" [(ngModel)]="novedadService.selectedNovedad.link">
+                              <span class="icon is-small is-left">
+                                <i class="fas fa-lock"></i>
+                              </span>
+                            </p>
+                          </div>
+
+                          <input type="hidden" value="{{previewImagen}}" name="imagen" #imagen="ngModel" [(ngModel)]="novedadService.selectedNovedad.imagen">
+
+                          <div class="file is-centered is-success is-boxed">
+                            <label class="file-label">
+                              <input class="file-input" accept="image/*" type="file" alife-file-to-base64 (onFileChanged)="onFileChanges($event)" [(fileModel)]="files">
+                              <span class="file-cta">
+                                <span class="file-icon">
+                                  <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                  Sube una foto…
+                                </span>
+                              </span>
+
+                              <div class="file is-centered" style="margin-top: 10px;">
+                                <figure class="image is-128x128">
+                                  <img src="{{previewImagen}}">
+                                </figure>
+                              </div> 
+                              
+                            </label>
+                          </div>
+                       
+                          
+                          <div class="field is-grouped">
+                            <div class="control">
+                              <button class="button is-link" type="submit">Crear</button>
+                            </div>
+                          </div>
+                    </form>
+
+                </section>
             </div>
         </div>
-    </div>
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-                <figure class="image is-2by1">
-                    <img src="https://images.pexels.com/photos/167635/pexels-photo-167635.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-content">
-                        <p class="title is-4">John Smith</p>
-                        <p class="subtitle is-6">@johnsmith</p>
-                    </div>
-                </div>
+    </ng-template>
+</div>
 
-                <div class="content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-                    <a>@bulmaio</a>.
-                    <a href="#">#css</a>
-                    <a href="#">#responsive</a>
-                </div>
+
+<div class="content">
+    <ng-template [ngIf]="updNovedad">
+        <div id="modalupd" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card">
+                <header class="modal-card-head">
+                    <p class="modal-card-title">Editar novedades</p>
+                    <button class="delete" aria-label="close" (click)="updNovedadForm(novedadUdpForm)"></button>
+                </header>
+                <section class="modal-card-body">
+
+                    <form #novedadUdpForm='ngForm' (ngSubmit)='putNovedad(novedadUdpForm)' action="">
+                        <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="novedadService.selectedNovedad._id">
+
+                        <div class="field">
+                            <label class="label">Titulo</label>
+                            <div class="control">
+                              <input class="input" type="text" placeholder="Ingresa el titulo de la novedad" name="titulo" #titulo="ngModel" [(ngModel)]="novedadService.selectedNovedad.titulo">
+                            </div>
+                          </div>
+                          
+                          <div class="field">
+                            <label class="label">Descripcion</label>
+                            <div class="control">
+                                <textarea class="textarea" placeholder="Ingresa una breve descripción" name="descripcion" #descripcion="ngModel" [(ngModel)]="novedadService.selectedNovedad.descripcion"></textarea>
+                            </div>
+                          </div>
+
+                          <div class="field">
+                            <label class="label">Link</label>
+                            <p class="control has-icons-left">
+                                <input class="input" type="text" placeholder="Ingresa un link para redireccionar para mas info" name="link" #link="ngModel" [(ngModel)]="novedadService.selectedNovedad.link">
+                              <span class="icon is-small is-left">
+                                <i class="fas fa-lock"></i>
+                              </span>
+                            </p>
+                          </div>
+
+                          <input type="hidden" value="{{previewImagen}}" name="imagen" #imagen="ngModel" [(ngModel)]="novedadService.selectedNovedad.imagen">
+
+                          <div class="file is-centered is-success is-boxed">
+                            <label class="file-label">
+                              <input class="file-input" accept="image/*" type="file" alife-file-to-base64 (onFileChanged)="onFileChanges($event)" [(fileModel)]="files">
+                              <span class="file-cta">
+                                <span class="file-icon">
+                                  <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                  Sube una imagen
+                                </span>
+                              </span>
+
+                              <div class="file is-centered" style="margin-top: 10px;">
+                                <figure class="image is-128x128">
+                                  <img src="{{previewImagen}}">
+                                </figure>
+                              </div> 
+                              
+                            </label>
+                          </div>
+                          
+                          
+                          <div class="field is-grouped">
+                            <div class="control">
+                              <button class="button is-link" type="submit">Actualizar</button>
+                            </div>
+                          </div>
+                    </form>
+
+                </section>
             </div>
         </div>
-    </div>
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-                <figure class="image is-2by1">
-                    <img src="https://images.pexels.com/photos/167635/pexels-photo-167635.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-content">
-                        <p class="title is-4">John Smith</p>
-                        <p class="subtitle is-6">@johnsmith</p>
-                    </div>
-                </div>
-
-                <div class="content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-                    <a>@bulmaio</a>.
-                    <a href="#">#css</a>
-                    <a href="#">#responsive</a>
-                </div>
-            </div>
-        </div>
-    </div> 
+    </ng-template>
 </div>
